--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <h3>Teléfonos de contacto:</h3>
             <a href="Tel: +240 222 605 885 "><p>Tel: +240 222 605 885 </p></a>
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
-            <a href="https://accounts.google.com/signin/v2/identifier?flowEntry=AddSession&hl=es-419&flowName=GlifWebSignIn"> <img src="./img/bx-mail-send.svg" alt=""> </a>
+            <a href="https://accounts.google.com/signin/v2/identifier?flowEntry=AddSession&hl=es-419&flowName=GlifWebSignIn"> <img src="./img/bx-mail-send.svg" alt="">Sarielesono@gmail.com </a>
             </div>
             <div class="redes" >
                 <h3>Síguenos en:</h3>
