He agregado cambios y estilos en los archivos de especialidades

--- a/periodismo.html
+++ b/periodismo.html
@@ -45,29 +45,28 @@ ul {
             <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
             <li class="menu__item"><a class="navbar" href="#">Sobre nosotros</a></li>  
            </ul>
-    </nav> 
+    </nav>
     <main class="contenedor">
-
         <article>
             <div class="container-logo">
                 <div class="container-img-logo">
-                    <img src="./img/doctora.jpg" alt="">
+                    <img src="./img/periodismo.jpg" alt="">
                 </div>
             </div>
             <br>
-            <h1 class="title">Grado Superior en Enfermería.</h1>
+            <h1 class="title">Periodismo.</h1>
             <br>
-            <p>El sector de Sanidad es uno de los sectores más demandados actualmente, mucho más después de la pandemia. El Instituto de Tecnologías Modernas te ofrecemos un curso de enfermería con profesores y programas actualizados.</p>
+            <p>Si su deseo es estudiar periodismo, le ofrecemos un curso de periodismo con un nivel de grado superior en el mismo, con profesores y programas actualizados.</p>
             <h3 class="subtitle">El programa se subdivide en 4 cuatrimestres:</h3>
             <br>
              <div class="container-lista">
                 <div class="grid-lista">
                     <h3>Primer cuatrimestre</h3>
                     <ul style="list-style:square ;">
-                        <li>Fisiología humana I</li>
-                        <li>Anatomía humana I</li>
-                        <li>Fundamentos de la enfermería I</li>
-                        <li>Bioquímica I</li>
+                        <li>Fundamentos de periodismo</li>
+                        <li>Prensa escrita</li>
+                        <li>Entrevista periodística</li>
+                        <li>Esstadística descriptiva</li>
                         <li>Matemáticas</li>
                         <li>Lengua española</li>
                     </ul>
@@ -76,13 +75,11 @@ ul {
                 <div class="grid-lista">
                     <h3>Segundo cuatrimestre</h3>
                     <ul style="list-style:square ;">
-                        <li>Fisiología humana II</li>
-                        <li>Anatomía humana II</li>
-                        <li>Bioquímica II</li>
-                        <li>Fundamento de enfermería</li>
+                        <li>Producción informativo en tele</li>
+                        <li>Redacción periodística</li>
+                        <li>Producción de informadción</li>
                         <li>Derecho laboral</li>
                         <li>Ingles</li>
-                        <li>Médico quirúrquico</li>
                         <li>Francés</li>
                     </ul>
                 </div>
@@ -90,26 +87,26 @@ ul {
                 <div class="grid-lista">
                     <h3>Tercer cuatrimestre</h3>
                     <ul style="list-style:square ;">
-                        <li>Enfermería médica</li>
-                        <li>Guinecología</li>
-                        <li>Farmacología 1</li>
-                        <li>Micro-biología</li>
-                        <li>Materno infantil</li>
-                        <li>Metodología de investigacíon</li>
+                        <li>Periodismo audiovisual</li>
+                        <li>Género periodístico</li>
+                        <li>Producción digital</li>
+                        <li>Emprendimiento</li>
                         <li>Derecho civil</li>
+                        <li>Ética profesional</li>
+                        <li>Metodología de investigación</li>
                     </ul>
                 </div>
 
                 <div class="grid-lista">
                     <h3>Cuarto cuatrimestre</h3>
                     <ul style="list-style:square ;">
-                        <li>Farmacología II</li>
-                        <li>Enfermería de urgencias</li>
-                        <li>Guinocología II</li>
+                        <li>Deontología de información</li>
+                        <li>Estructura de comunicación</li>
+                        <li>Derecho de comunicación</li>
                         <li>Técnicas de laboratorio</li>
-                        <li>Planificación familiar</li>
                         <li>Ofimática</li>
                         <li>Derecho civil</li>
+                        <li>Proyecto de comunicación</li>
                         <li>Trabajo fin de grado</li>
                     </ul>
                 </div>
