He añadido cambios en los archivos de carreras

--- a/idiomas.html
+++ b/idiomas.html
@@ -19,12 +19,12 @@
             <li class="menu__item"><a class="navbar" href="index.html">Inicio</a></li>   
             <li class="menu__item"><a class="navbar" href="./idiomas.html">Idiomas</a></li>  
             <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
-            <li class="menu__item"><a class="navbar" href="#">Sobre nosotros</a></li>  
+            <li class="menu__item"><a class="navbar" href="./sobre-nosotros.html">Sobre nosotros</a></li>  
            </ul>
     </nav> 
     <main class="contenedor">
 
-        <article>
+        <article class="cuerpo">
             <h2 class="title"> <img src="./img/idiomas.png" alt="idiomas">Cursos de idiomas.</h2> 
             <p class="subtitle">En el departamento de idiomas, se desarrolla la enseñanza de los siguientes idiomas:</p>
             <div class="list-idiomas">
@@ -51,9 +51,9 @@
                 <h3>Teléfonos de contacto:</h3>
             <a href="Tel: +240 222 605 885 "><p>Tel: +240 222 605 885 </p></a>
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
-            <a href="https://accounts.google.com/signin/v2/identifier?flowEntry=AddSession&hl=es-419&flowName=GlifWebSignIn"> <img src="./img/bx-mail-send.svg" alt="">Sarielesono@gmail.com</a>
             </div>
             <div class="redes" >
+                <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
                 <a class="whatsapp" href="whatsapp://send?text=Hola, Me gustaria saber sobre&phone=+240222061695&abid=+240222061695"><img src="./img/bxl-whatsapp.svg" alt="icon-whatsapp">Whatsapp</a>
