--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -36,39 +36,14 @@
                 </div>
             </div>
             <p class="llama">Si necesitas ayuda llama al <a href="Tel: +240 222 061 695 ">+240 222 061 695 </a></p>
-            <h2 class="title-requisitos">¡¡¡ MATRÍCULA ABIERTA YA PARA EL CURSO 2022/2023 !!!</h2>
-            <div class="requisitos">
-                <ul class="nuevos-estudiantes" >
-                    <h3 class="subtitle-requisitos">Requisitos para la inscripción.</h3>
-                    <li>Hoja académica actualizada de los estudios reslizados o boletin escolar.</li>
-                    <li>Fotocopia de identidad personal o pasaporte en vigor.</li>
-                    <li>2 fotografías tamaño carne en color.</li>
-                    <li>Nivel  mínimo de cuarto de ESBA.</li>
-                    <li>Un adelanto de 1 mes.</li>
-                </ul> 
-                <ul class="antiguos-estudiantes">
-                    <h3 class="subtitle-requisitos">Cuota a pagar para el año escolar.</h3>
-                    <li>Matrícula: 12.000 XAF.</li>
-                    <li>Mensualidad: 25.000 XAF.</li>
-                    <li>Carnet escolar: 5.000 XAF.</li>
-                </ul>
-            </div>
+            <h2>Instituto de Tecnologías Modernas</h2>
+          <p>Es un centro Profesional Internacional reglado por el Ministerio de Educación Ciencia y Deportes, Nuestros títulos son oficialmente reconocidos por dicho Ministerio.</p>
+          <br>
             <div class="title-campus-facultades">
-                <h3>Fórmate con nosotros adquiriendo un título internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada con
+                <h3>Fórmate con nosotros adquiriendo un título Internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada con
                      ventajas de internet <span>Wifi</span> en el recinto escolar y <span>fotocopiadora para poder imprimir</span> temarios, ejercicios y trabajos escolares.</h3>
             </div>
-
-            <div class="campus-facultades">
-                    <a href="./administracion.html"><img src="./img/administrador.jpg" alt="icon Administración"> Administración <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/inform.jpg" alt="icon Informática"> Informática <span>ver info.</span></a>
-                    <a href="./enfermería.html"> <img src="./img/doctora.jpg" alt="icon sanidad"> Enfermería <span>ver info.</span></a>
-                    <a href="./electricidad.html
-                    "> <img src="./img/electric.jpg" alt="electricidad"> Electricidad <span>ver info.</span></a>
-                    <a href="./periodismo.html"> <img src="./img/periodismo.jpg" alt="icon periodismo"> Periodismo <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/mecanica.jpg" alt="icon mecánica"> Mecánica <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/clima.jpg" alt="icon Climatización">Climatización <span>ver info.</span></a>
-                  <br>
-               </div> <br>
+<br>
 
                <hr>
             <div class="record">
