--- a/enfermería.html
+++ b/enfermería.html
@@ -48,7 +48,7 @@ ul {
     </nav> 
     <main class="contenedor">
 
-        <article>
+        <article class="cuerpo">
             <div class="container-logo">
                 <div class="container-img-logo">
                     <img src="./img/doctora.jpg" alt="">
@@ -125,16 +125,16 @@ ul {
                 <h3>Teléfonos de contacto:</h3>
             <a href="Tel: +240 222 605 885 "><p>Tel: +240 222 605 885 </p></a>
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
-            <a href="https://accounts.google.com/signin/v2/identifier?flowEntry=AddSession&hl=es-419&flowName=GlifWebSignIn"> <img src="./img/bx-mail-send.svg" alt="">Sarielesono@gmail.com</a>
             </div>
             <div class="redes" >
+                <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
                 <a class="whatsapp" href="whatsapp://send?text=Hola, Me gustaria saber sobre&phone=+240222061695&abid=+240222061695"><img src="./img/bxl-whatsapp.svg" alt="icon-whatsapp">Whatsapp</a>
             </div>
         </div>
         <div class="legal">
-            <i class="fa fa-copyright" aria-hidden="true"> Copyright 2022 / Todos los derevhos reservados por I.T.M</i>
+            <i class="fa fa-copyright" aria-hidden="true"> Copyright 2022 / Diseñado por Urbandev</i>
 </div>
     </footer>
     <script src="./js/main.js" ></script>
