--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             </div>
 
             <div class="campus-facultades">
-                    <a href="./administracion.html"><img src="./img/administrador.jpg" alt="icon Administración"> Administración <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/inform.jpg" alt="icon Informática"> Informática <span>ver info.</span></a>
-                    <a href="./enfermería.html"> <img src="./img/doctora.jpg" alt="icon sanidad"> Enfermería <span>ver info.</span></a>
+                    <a href="./administracion.html"><img src="./img/administrador.jpg" alt="icon Administración"> Administración <span>Ver información</span></a>
+                    <a href="./informatica.html"> <img src="./img/inform.jpg" alt="icon Informática"> Informática <span>Ver información</span></a>
+                    <a href="./enfermería.html"> <img src="./img/doctora.jpg" alt="icon sanidad"> Enfermería <span>Ver información</span></a>
                     <a href="./electricidad.html
-                    "> <img src="./img/electric.jpg" alt="electricidad"> Electricidad <span>ver info.</span></a>
-                    <a href="./periodismo.html"> <img src="./img/periodismo.jpg" alt="icon periodismo"> Periodismo <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/mecanica.jpg" alt="icon mecánica"> Mecánica <span>ver info.</span></a>
-                    <a href="./#"> <img src="./img/clima.jpg" alt="icon Climatización">Climatización <span>ver info.</span></a>
+                    "> <img src="./img/electric.jpg" alt="electricidad"> Electricidad <span>Ver información</span></a>
+                    <a href="./periodismo.html"> <img src="./img/periodismo.jpg" alt="icon periodismo"> Periodismo <span>Ver información</span></a>
+                    <a href="./#"> <img src="./img/mecanica.jpg" alt="icon mecánica"> Mecánica <span>Ver información</span></a>
+                    <a href="./#"> <img src="./img/clima.jpg" alt="icon Climatización">Climatización <span>Ver información</span></a>
                   <br>
                </div> <br>
 
