He añadido nuevos cambios

--- a/electricidad.html
+++ b/electricidad.html
@@ -43,7 +43,7 @@ ul {
         <li class="menu__item"><a class="navbar" href="index.html">Inicio</a></li>   
         <li class="menu__item"><a class="navbar" href="./idiomas.html">Idiomas</a></li>  
         <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
-        <li class="menu__item"><a class="navbar" href="#">Sobre nosotros</a></li>  
+        <li class="menu__item"><a class="navbar" href="./sobre-nosotros.html">Sobre nosotros</a></li>  
        </ul>
 </nav>  
     <main class="contenedor">
