--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -37,7 +37,7 @@
             </div>
             <p class="llama">Si necesitas ayuda llama al <a href="Tel: +240 222 061 695 ">+240 222 061 695 </a></p>
             <h2>Instituto de Tecnologías Modernas</h2>
-          <p>Es un centro Profesional Internacional reglado por el Ministerio de Educación Ciencia y Deportes, Nuestros títulos son oficialmente reconocidos por dicho Ministerio.</p>
+          <p>Es un centro Profesional Internacional reglado por el Ministerio de Educación Enseñanza Universitaria y Deportes, Nuestros títulos son oficialmente reconocidos por dicho Ministerio.</p>
           <br>
             <div class="title-campus-facultades">
                 <h3>Fórmate con nosotros adquiriendo un título Internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada con
