He editado el documento de informática insertando las clases en pdf y todos los detalles

--- a/calendario-anual.html
+++ b/calendario-anual.html
@@ -24,8 +24,6 @@
            <div class="enlaces">
                <a href="./index.html">Home</a>
                <a href="./idiomas.html">Idiomas</a>
-               <a href="./Calendario-anual.html">Calendario anual</a>
-               <a href="./ultimas-noticias.html">Última noticia</a>
                <a href="./sobre-nosotros.html">Sobre nosotros</a>
            </div>
         </div>
@@ -516,6 +514,7 @@
                           <i class="fa fa-copyright" aria-hidden="true"> copyright 2022</i>
             </div>
             <div class="redes" >
+                <h3>Correo:</h3>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-instagram.svg" alt="instagram"></a>
                     <a href="https://twitter.com/UrbanoAkoro"><img class="icon-twitter" src="./img/bxl-twitter.svg" alt="twitter"></a>
