--- a/enfermería.html
+++ b/enfermería.html
@@ -42,7 +42,6 @@ ul {
            <ul class="enlaces">
             <li class="menu__item"><a class="navbar" href="index.html">Inicio</a></li>   
             <li class="menu__item"><a class="navbar" href="./idiomas.html">Idiomas</a></li>  
-            <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
             <li class="menu__item"><a class="navbar" href="./sobre-nosotros.html">Sobre nosotros</a></li>  
            </ul>
     </nav> 
@@ -127,6 +126,7 @@ ul {
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
             </div>
             <div class="redes" >
+                <h3>Correo:</h3>
                 <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
