--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -20,7 +20,6 @@
            <ul class="enlaces">
             <li class="menu__item"><a class="navbar" href="index.html">Inicio</a></li>   
             <li class="menu__item"><a class="navbar" href="./idiomas.html">Idiomas</a></li>  
-            <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
             <li class="menu__item"><a class="navbar" href="./sobre-nosotros.html">Sobre nosotros</a></li>  
            </ul>
     </nav>
@@ -38,10 +37,9 @@
             <p class="llama">Si necesitas ayuda llama al <a href="Tel: +240 222 061 695 ">+240 222 061 695 </a></p>
             <h2>Instituto de Tecnologías Modernas</h2>
           <p>Es un centro Profesional Internacional reglado por el Ministerio de Educación Enseñanza Universitaria y Deportes, Nuestros títulos son oficialmente reconocidos por dicho Ministerio.</p>
-          <br>
-            <div class="title-campus-facultades">
-                <h3>Fórmate con nosotros adquiriendo un título Internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada con
-                     ventajas de internet <span>Wifi</span> en el recinto escolar y <span>fotocopiadora para poder imprimir</span> temarios, ejercicios y trabajos escolares.</h3>
+            <div>
+                <p>Fórmate con nosotros adquiriendo un título Internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada.</p>
+                <p>Nos encontramos en la ciudad de Bata, concretamente en Nkoñombong-laté donde está en colegio privado Luz de Cristo. </p>
             </div>
 <br>
 
@@ -98,6 +96,7 @@
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
             </div>
             <div class="redes" >
+                <h3>Correo:</h3>
                 <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
