--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
            <ul class="enlaces">
             <li class="menu__item"><a class="navbar" href="index.html">Inicio</a></li>   
             <li class="menu__item"><a class="navbar" href="./idiomas.html">Idiomas</a></li>  
-            <li class="menu__item"><a class="navbar" href="#">Anuncios</a></li>  
             <li class="menu__item"><a class="navbar" href="./sobre-nosotros.html">Sobre nosotros</a></li>  
            </ul>
     </nav>
@@ -62,13 +61,11 @@
                     <a href="./administracion.html"><img src="./img/administrador.jpg" alt="icon Administración"> Administración <span>Ver información</span></a>
                     <a href="./informatica.html"> <img src="./img/inform.jpg" alt="icon Informática"> Informática <span>Ver información</span></a>
                     <a href="./enfermería.html"> <img src="./img/doctora.jpg" alt="icon sanidad"> Enfermería <span>Ver información</span></a>
-                    <a href="./electricidad.html
-                    "> <img src="./img/electric.jpg" alt="electricidad"> Electricidad <span>Ver información</span></a>
+                    <a href="./electricidad.html"> <img src="./img/electric.jpg" alt="electricidad"> Electricidad <span>Ver información</span></a>
                     <a href="./periodismo.html"> <img src="./img/periodismo.jpg" alt="icon periodismo"> Periodismo <span>Ver información</span></a>
-                    <a href="./#"> <img src="./img/mecanica.jpg" alt="icon mecánica"> Mecánica <span>Ver información</span></a>
-                    <a href="./#"> <img src="./img/clima.jpg" alt="icon Climatización">Climatización <span>Ver información</span></a>
-                  <br>
-               </div> <br>
+            <!-- <a href="./#"> <img src="./img/mecanica.jpg" alt="icon mecánica"> Mecánica <span>Ver información</span></a>
+                    <a href="./#"> <img src="./img/clima.jpg" alt="icon Climatización">Climatización <span>Ver información</span></a> -->       
+               </div> 
 
                <hr>
             <div class="record">
@@ -123,6 +120,7 @@
             <a href="Tel: +240 222 061 695 "><p>Tel: +240 222 061 695 </p></a>
             </div>
             <div class="redes" >
+                <h3>Correo:</h3>
                 <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
                 <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
