He cambiado los nombres de los archivos y el ajuste del menu

--- a/informatica.html
+++ b/informatica.html
@@ -230,9 +230,9 @@ ul {
             <p>Protocolo extensible de mensajería y comunicación de presencia que está basado en XML y se emplea en mensajería istantánea.</p>
         </div><br>
         <div id="container-tema1-pdf" class="container-tema-pdf">
-            <iframe src="./pdf/Tema1 introduccion.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
+            <iframe src="./pdf/Tema1-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcas.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
             <br><br>
-            <iframe src="./pdf/Tema1 parte 2. clasificacion y caracteristicas.pdf" width=50%" height="400px" frameborder="0"></iframe>
+            <iframe src="./pdf/Tema1-parte-2-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcass.pdf" width=50%" height="400px" frameborder="0"></iframe>
         </div>
         <br><br>
         <div id="ejercicio-tema1" class="container-tema-pdf">
@@ -269,7 +269,7 @@ ul {
         <br>
 
         <div id="container-tema2-pdf" class="container-tema-pdf">
-            <iframe src="./pdf/Tema2 Introduccion.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
+            <iframe src="./pdf/Tema2-utilizacion-de-lenguajes-de-marcas-en-entornos-web.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
         </div>
         <br><br>
         <h3><a href="https://visualstudio.microsoft.com/es/">Visual Studio Code</a>.</h3>
