He añadido el icono de facebook y he cancelado su link

--- a/calendario-anual.html
+++ b/calendario-anual.html
@@ -516,7 +516,7 @@
             <div class="redes" >
                 <h3>Correo:</h3>
                 <h3>Síguenos en:</h3>
-                <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-instagram.svg" alt="instagram"></a>
+                <a href="#"> <img class="instagram" src="./img/bxl-instagram.svg" alt="instagram"></a>
                     <a href="https://twitter.com/UrbanoAkoro"><img class="icon-twitter" src="./img/bxl-twitter.svg" alt="twitter"></a>
                     <a href="#"><img class="icon-facebook" src="./img/bxl-linkedin.svg" alt="Linkedin"></a>
             </div>
