--- a/electricidad.html
+++ b/electricidad.html
@@ -129,7 +129,7 @@ ul {
             <div class="redes" >
                 <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
-                <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
+                <a href="#"> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
                 <a class="whatsapp" href="whatsapp://send?text=Hola, Me gustaria saber sobre&phone=+240222061695&abid=+240222061695"><img src="./img/bxl-whatsapp.svg" alt="icon-whatsapp">Whatsapp</a>
             </div>
         </div>
