--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <p class="llama">Si necesitas ayuda llama al <a href="Tel: +240 222 061 695 ">+240 222 061 695 </a></p>
-            <h2 class="title-requisitos">¡¡¡ MATRÍCULA ABIERTA YA PARA EL CURSO 2022/2023 !!!</h2>
+            <h2 class="title-requisitos">¡LA MATRÍCULA SIGUE ABIERTA PARA EL CURSO 2022/2023!</h2>
             <div class="requisitos">
                 <ul class="nuevos-estudiantes" >
                     <h3 class="subtitle-requisitos">Requisitos para la inscripción.</h3>
@@ -53,8 +53,7 @@
                 </ul>
             </div>
             <div class="title-campus-facultades">
-                <h3>Fórmate con nosotros adquiriendo un título internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada con
-                     ventajas de internet <span>Wifi</span> en el recinto escolar y <span>fotocopiadora para poder imprimir</span> temarios, ejercicios y trabajos escolares.</h3>
+                <p>Fórmate con nosotros adquiriendo un título internacional de grado superior en las especialidades que abajo se citan. Le ofrecemos una formación actualizada.</p>
             </div>
 
             <div class="campus-facultades">
@@ -123,7 +122,7 @@
                 <h3>Correo:</h3>
                 <p> <img src="./img/bx-mail-send.svg" alt="icon correo">Sarielesono@gmail.com </p>
                 <h3>Síguenos en:</h3>
-                <a href="https://www.instagram.com/urbanomangomo/ "> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
+                <a href="#"> <img class="instagram" src="./img/bxl-facebook-square.svg" alt="icon facebook">Facebook</a>
                 <a class="whatsapp" href="whatsapp://send?text=Hola, Me gustaria saber sobre&phone=+240222061695&abid=+240222061695"><img src="./img/bxl-whatsapp.svg" alt="icon-whatsapp">Whatsapp</a>
             </div>
         </div>
