--- a/informatica.html
+++ b/informatica.html
@@ -8,7 +8,37 @@
 article {
     margin-bottom: 20px;
 }
-
+.title-requisitos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding:5px;
+    margin: 0 auto;
+    text-align: center;
+    color: red;
+    font-size: 20px;
+}
+.title-requisitos {    /* Animacion del titulo del formulario*/
+    position: relative;
+    z-index: 1;
+    /* aquí empezamos con la animacion de la cabeza completa*/
+    animation-name:layer;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+}
+@keyframes layer {
+    0% {
+      left: 10px;
+    }
+    25% {
+        left: -20px;   /* aquí ponemos el tamaño que queremos que baje*/
+    }
+    100% {
+        left: 10px;
+    }
+}
 .container-diseno-web {
     width: 100%;
     display: flex;
@@ -123,7 +153,8 @@ ul {
             <br>
             <h1 class="title">Curso de Informática.</h1>
             <br>
-            
+            <h2 class="title-requisitos">¡ El primer cuatrimestre termina el dia 10 de febrero del año 2023 !</h2>
+            <br>
             <p>En los últimos años, la informática a evolucionado asta el grado en que el ser humano ya puede hacer cosas que antes eran 
                 imposibles para él. Estudiar actualmente la informática para nosotros, es estar actualizado y intender el las cosas de una otra manera.</p>
             <h3 class="subtitle">El programa se subdivide en 4 cuatrimestres:</h3>
