he cambiado el tamaño de los pdf

--- a/informatica.html
+++ b/informatica.html
@@ -118,7 +118,6 @@ ul {
     }
     iframe {
         width: 100%;
-        margin: 10px;
     }
 }
 @media screen and (max-width: 530px) {
@@ -127,6 +126,10 @@ ul {
     }
     .tema {
     font-size: 19px;
+    }
+    .pdf {
+        width: 100%;
+        height: 100px;
     }
 }
 
@@ -162,7 +165,7 @@ ul {
             <br>
             <h2 class="title-requisitos">¡ El primer cuatrimestre termina el dia 10 de febrero del año 2023 !</h2>
             <br>
-            <p>En los últimos años, la infor3mática a evolucionado asta el grado en que el ser humano ya puede hacer cosas que antes eran 
+            <p>En los últimos años, la informática a evolucionado asta el grado en que el ser humano ya puede hacer cosas que antes eran 
                 imposibles para él. Estudiar actualmente la informática para nosotros, es estar actualizado y intender el las cosas de una otra manera.</p>
             <h3 class="subtitle">El programa se subdivide en 4 cuatrimestres:</h3>
             <br>
@@ -268,9 +271,9 @@ ul {
             <p>Protocolo extensible de mensajería y comunicación de presencia que está basado en XML y se emplea en mensajería istantánea.</p>
         </div><br>
         <div id="container-tema1-pdf" class="container-tema-pdf">
-            <iframe src="./pdf/Tema1-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcas.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
+            <iframe class="pdf" src="./pdf/Tema1-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcas.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
             <br><br>
-            <iframe src="./pdf/Tema1-parte-2-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcass.pdf" width=50%" height="400px" frameborder="0"></iframe>
+            <iframe class="pdf" src="./pdf/Tema1-parte-2-Reconocimiento-de-las-caracteristicas-de-lenguaje-de-marcass.pdf" width=50%" height="400px" frameborder="0"></iframe>
         </div>
         <br><br>
         <div id="ejercicio-tema1" class="container-tema-pdf">
@@ -279,7 +282,7 @@ ul {
                 <p>Los ejercicios consisten en evaluar el interés de los alumnos y su nivel de captación sobre todo lo que hemos podido hablar en el primer tema. Dependiendo a la implicación
                      de los alumnos, el ejercicio puede ser considerado como primera nota del primer cuatrimestre. Por lo que viene bien que todos puedan resolverlo para que pueda conocer el nivel de implicación de todos.</p>
             </div>
-            <iframe src="./pdf/Ejercicios-tema1.pdf" width=100%" height="400px" frameborder="0"></iframe>
+            <iframe class="pdf" src="./pdf/Ejercicios-tema1.pdf" width=100%" height="400px" frameborder="0"></iframe>
         </div> 
         <br>
 <hr>
@@ -319,7 +322,7 @@ ul {
        
         <br>
         <div id="container-tema2-pdf" class="container-tema-pdf">
-            <iframe src="./pdf/Tema2-utilizacion-de-lenguajes-de-marcas-en-entornos-web.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
+            <iframe class="pdf" src="./pdf/Tema2-utilizacion-de-lenguajes-de-marcas-en-entornos-web.pdf" width=50%" height="400px" margin-bottom="10px" frameborder="0"></iframe>
             <div class="container-video">
                 <h3>Aprende a crear un documento HTML con Visual Studio</h3>
                 <iframe class="video-youtube" width="90%" height="320" src="https://www.youtube.com/embed/qPExX6Pngl0" title="video aprender a crear un archivo HTML con Visual Studio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
