He agregado el margen superior de los videos

--- a/asignatura-diseño-web.html
+++ b/asignatura-diseño-web.html
@@ -80,6 +80,7 @@ ul {
     align-items: center;
     width: 100%;
     margin: 0 auto;
+    margin-top: 10px;
 }
 @media screen and (max-width: 1150px) {
         .container-tema-pdf {
@@ -229,7 +230,7 @@ ul {
                 <iframe class="video-youtube" width="90%" height="320" src="https://www.youtube.com/embed/qPExX6Pngl0" title="video aprender a crear un archivo HTML con Visual Studio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-        <br><br>
+        <br>
         
 
     </main>
